tests/analyze/regex-unknown-character-class/analyze.snap
---
source: tests/analyze.rs
assertion_line: 41
expression: output
---
error: Unknown character class `bogus` in regular expression.
> 1 | def bad = `digit | bogus | letter`
                         ^^^^^
